#269 - Add an endpoint to retrieve a folder index key based on the path